--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,24 @@
 body{
     margin: 0px;
 }
+/* Utilities */
+.line{
+    background-color: white;
+    width: 100px;
+    height: 5px;
+    margin: 15px 10px;
+}
+.star-shape{
+    display: flex;
+    justify-content: center;
+}
 /* navbar section */
 .navbar{
-    background-color: rgb(0, 0, 85);
+    background-color: rgba(8, 8, 46, 0.767);
     display: flex;
     justify-content: space-between;
 }
-.title{
+.title_navbar{
     font-size: 24px;
     font-weight: bold;
     color: white;
@@ -26,4 +37,110 @@ body{
     margin: 0 20px;
     color: white;
     cursor: pointer;
+}
+.color{
+    color: #1abc9c;
+}
+/* Hero section */
+.Hero_img{
+    display: flex;
+    justify-content: center;
+}
+.hero{
+    background-color: #1abc9c;
+    padding: 50px 0 50px;
+}
+.Hero_img >img {
+    width: 200px;
+}
+.whit_title {
+    text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+    color: white;
+}
+.hero_subtitle{
+    text-align: center;
+    font-size: 25px;
+    color: white;
+}
+/* portfolio section */
+.title{
+    text-align: center;
+    font-size: 60px;
+    font-weight: bold;
+    color: rgb(18, 14, 77);
+}
+.line-portfolio{
+    background-color: rgb(18, 14, 77);
+    width: 100px;
+    height: 5px;
+    margin: 15px 10px;
+}
+.portfolio-img{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.portfolio-img > img {
+    width: 350px;
+    margin-top: 30px;
+}
+/* about section */
+.about{
+    margin: 50px 0 50px;
+    background-color: #1abc9c;
+}
+.about-info{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+}
+.about-paragraph{
+    font-size: 20px;
+    color:white;
+    width: 25%;
+}
+.about-btn{
+    display: block;
+    text-align: center;
+    margin:60px;
+    padding: 50px;
+}
+.btn{
+    width: 150px;
+    height: 40px;
+    cursor: pointer;
+}
+/* contact section */
+.contact{
+    margin: 50px 0 50px;
+}
+.input{
+    text-align: center;
+}
+.contact-input{
+    width: 50%;
+    height: 30px;
+    margin: 10px 0 10px;
+}
+.contact-msg{
+    width: 50%;
+    height: 60px;
+    margin: 10px 0 10px;
+}
+.btn-green{
+    background-color: green;
+    opacity: 0.5;
+}
+
+.final{
+    flex-wrap: wrap;
+    display: flex;
+    justify-content: space-evenly;
+    background-color: rgb(18, 14, 77) ;
+    color: white;
+}
+.final-info{
+    width: 20%;
 }
